# idiff

./: Cargo.toml  README.md  justfile
.github/workflows/: release.yml
src/: lib.rs  main.rs
tests/: lib.rs
