[package]
name = "idiff"
version = "0.1.0"
edition = "2021"
description = "diff - for images (compares images pixel by pixel)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
image = "0.24.6"

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
insta = { version = "1.29.0", features = ["yaml"] }
predicates = "3.0.3"
